fix footer-alignment on mobile phones

--- a/css/main.css
+++ b/css/main.css
@@ -389,6 +389,12 @@ details[open] summary {
   justify-items: center;
 }
 
+@media (width < 700px) {
+  .footer__cols {
+    justify-items: start;
+  }
+}
+
 .footer__links-item-title {
   font-size: 1.5rem;
   color: var(--color-light);
